Fix case resolution submit and reveal reliability

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ OPENAI_API_KEY=sk-REPLACE_ME
 OPENAI_MODEL_ROUTINE=gpt-4.1-mini
 OPENAI_MODEL_CRITICAL=gpt-4.1
 OPENAI_MODEL_NARRATOR=gpt-4.1-mini
-OPENAI_MODEL_CHECKER=gpt-4.1
+OPENAI_MODEL_CHECKER=gpt-4.1-mini
 OPENAI_MAX_OUTPUT_TOKENS=220
 OPENAI_TEMPERATURE=0.7
 OPENAI_USE_MOCK=false
